Ajuste para uso de Postgres no Auth-service