@@ -25,6 +25,8 @@ import java.security.spec.InvalidKeySpecException;
 import java.security.spec.PKCS8EncodedKeySpec;
 import java.security.spec.X509EncodedKeySpec;
 import java.util.Base64;
+import java.io.InputStream;
+import java.io.IOException;
 
 @Configuration
 public class JwtConfig {
@@ -74,6 +76,8 @@ public class JwtConfig {
     }
 
     private byte[] readKeyBytes(Resource resource) throws IOException {
-        return Files.readAllBytes(resource.getFile().toPath());
+        try (InputStream inputStream = resource.getInputStream()) {
+            return inputStream.readAllBytes();
+        }
     }
 }
